<resources>
    <string name="app_name">ControleDeViagem</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="erroAutenticacao">Usuario ou senha incorreto</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="controle_gastos">Controle de Gastos</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagem">Minhas Viagens</string>
    <string name="minhas_configuracoes">Configurações</string>
    <string name="title_activity_cadastro_viagem">Cadastro de Viagem</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocio">Negocio</string>
    <string name="data_chegada">Data de Chegada</string>
    <string name="data_de_saida">Data de Saida</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Numero pessoas</string>
    <string name="criar_nova_viagem">Criar nova viagem</string>
    <string name="selecione">Selecione</string>
    <string name="title_activity_gasto_viagem">Gasto da Viagem</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei!</string>
    <string name="categoria">Categoria</string>
    <string name="title_activity_minhas_viagens">MInhas Viagens</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gasto_lista">Lista de Gastos</string>
    <string name="sair">Sair</string>
    <string name="action_deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="deletar">Deletar</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Tem certa que quer excluir ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_viagem_sumario">Nesse modo você pode viajar sem se preocupar em selecionar a viagem</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informe_valor_limite">Informe o valor limite</string>
    <string name="valor_limite_sumario">Gasto limite da viagem em %</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="manter_conectado">Manter me conectado</string>
    <string name="confirmacao_exclusao_gasto">Confirmar exclusão do gasto</string>
    <string name="conta_inexistente">Conta inexistente</string>


</resources>
