<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <ImageView
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_weight="0.35"
        android:layout_marginBottom="50dp"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/txtUsuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUsuario" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/senha"
        android:id="@+id/txtSenha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenha" />

    <CheckBox android:id="@+id/ckbConectado"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/manter_conectado"
        android:layout_gravity="left"
        android:checked="false" />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        android:id="@+id/btnLogar"
        android:onClick="onClickLogar" />
</LinearLayout>
